2. Move 'Sleep all' and 'Create group player' into menu of 'Manager players'
   dialog.
3. Add 'Clear queue', 'Switch off', and 'Switch on' for all players in menu
   of 'Manager players' dialog.
4. If using playlist images, then add an overlay icon top-left for favourited
   playlists.
5. Enable playlist images by default.
6. Default to grid view.

5.10.6
------
1. Disable repeat it set to repeat single and random mix is active.
2. Fix playlist folder browsing.

5.10.5
------
1. Use 'sticky' MAI titles, with background, to fix cropped text.

5.10.4
------
 1. Support back-slash escaping of commas in release types - e.g. "A\, B".
 2. If showing multiple artist biographies in MAI then add titles for each.
 3. Fix adding Bliss mix to queue.
 4. Fix 'Add to playlist' for Bliss mixes.
 5. If 'Show all artists' is enabled then show all artists, track-artists, and
    album-artists - thanks to Darrell.
 6. Add support for LMS9.1 'Playlist Folder' browse mode.
 7. Fix now-playing navigation bar icon and text colour when using light theme,
    coloured toolbars, and full-view now-playing.
 8. Don't send player power updates for group players.
 9. Fix 'Play next' action for track lists.
10. Keep MAI titles at top and only scroll text.
11. Fix adding tracks from 'All tracks' to playlists.
12. Change composers and authors icons.

5.10.3
------
1. Add AudioDrama, DJMix, Interview, and Spokenword release icons.
2. When getting release icons remove hyphen, underscore, and spaces from
   release name.
3. When updating native app of selected player, also send player's IP address -
   then the Material APK can use this to detect if that player is local.
4. Prevent duplicate 'Scroll to' action.

5.10.2
------
1. Re-add 'Compositions' action.
2. Group all non-artist roles under 'Appearances' when listing an artist's
   albums.
3. Use circular images for works-composers as per other artists.
4. Allow moving queue from group to a member.