@@ -9,6 +9,7 @@
    playlists.
 5. Enable playlist images by default.
 6. Default to grid view.
+7. Re-add notification support, removed in 4.0.0, as used by some plugins.
 
 5.10.6
 ------
